<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>Headlights</class>
 <widget class="QMainWindow" name="Headlights">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>1059</width>
    <height>749</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Headlights</string>
  </property>
  <widget class="QWidget" name="centralwidget">
   <widget class="QPushButton" name="right">
    <property name="geometry">
     <rect>
      <x>660</x>
      <y>540</y>
      <width>191</width>
      <height>81</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">border: none;
image: url(:/assets/right.png);
;</string>
    </property>
    <property name="text">
     <string/>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButton">
    <property name="geometry">
     <rect>
      <x>470</x>
      <y>550</y>
      <width>141</width>
      <height>91</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">border: none;
image: url(:/assets/switch.png);
;</string>
    </property>
    <property name="text">
     <string/>
    </property>
   </widget>
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
      <x>530</x>
      <y>290</y>
      <width>281</width>
      <height>211</height>
     </rect>
    </property>
    <property name="text">
     <string/>
    </property>
    <property name="pixmap">
     <pixmap>../AirController/assets/pressed-bg-down.png</pixmap>
    </property>
   </widget>
   <widget class="QLabel" name="tesla">
    <property name="geometry">
     <rect>
      <x>160</x>
      <y>110</y>
      <width>781</width>
      <height>461</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">image: url(:/assets/teslaCar.png); border: none;</string>
    </property>
    <property name="text">
     <string/>
    </property>
   </widget>
   <widget class="QLabel" name="label_4">
    <property name="geometry">
     <rect>
      <x>250</x>
      <y>240</y>
      <width>281</width>
      <height>211</height>
     </rect>
    </property>
    <property name="text">
     <string/>
    </property>
    <property name="pixmap">
     <pixmap>../AirController/assets/pressed-bg-up.png</pixmap>
    </property>
   </widget>
   <widget class="QPushButton" name="left">
    <property name="geometry">
     <rect>
      <x>220</x>
      <y>550</y>
      <width>191</width>
      <height>81</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">border: none;
image: url(:/assets/left.png);
</string>
    </property>
    <property name="text">
     <string/>
    </property>
   </widget>
   <widget class="QPushButton" name="back">
    <property name="geometry">
     <rect>
      <x>20</x>
      <y>10</y>
      <width>31</width>
      <height>31</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">image: url(:/assets/back.png);
border: none;
</string>
    </property>
    <property name="text">
     <string/>
    </property>
   </widget>
   <widget class="QLabel" name="label_5">
    <property name="geometry">
     <rect>
      <x>250</x>
      <y>290</y>
      <width>281</width>
      <height>211</height>
     </rect>
    </property>
    <property name="text">
     <string/>
    </property>
    <property name="pixmap">
     <pixmap>../AirController/assets/pressed-bg-down.png</pixmap>
    </property>
   </widget>
   <widget class="QLabel" name="label_6">
    <property name="geometry">
     <rect>
      <x>550</x>
      <y>230</y>
      <width>281</width>
      <height>211</height>
     </rect>
    </property>
    <property name="text">
     <string/>
    </property>
    <property name="pixmap">
     <pixmap>../AirController/assets/pressed-bg-up.png</pixmap>
    </property>
   </widget>
   <zorder>tesla</zorder>
   <zorder>label_6</zorder>
   <zorder>right</zorder>
   <zorder>pushButton</zorder>
   <zorder>label_3</zorder>
   <zorder>label_4</zorder>
   <zorder>left</zorder>
   <zorder>back</zorder>
   <zorder>label_5</zorder>
  </widget>
  <widget class="QMenuBar" name="menubar">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>1059</width>
     <height>22</height>
    </rect>
   </property>
  </widget>
  <widget class="QStatusBar" name="statusbar"/>
 </widget>
 <resources/>
 <connections/>
</ui>
